# slick-nat-client

./: .gitignore  CMakeLists.txt  Makefile.client  Makefile.clientd  README.md  build.sh
.github/workflows/: build-and-release.yml  test-build.yml
pkg/deb/: README.md  build-packages.sh
pkg/deb-slnatc/: build-client.sh  control
pkg/deb-slnatc/res/: manpage
pkg/deb-slnatcd/: build-daemon.sh  control
pkg/deb-slnatcd/res/: etc-slnatd  slick-nat-clientd.8  slnatcd.service
pkg/deb-slnatd/: build-daemon.sh  control
src/: CMakeLists.txt  README.md
src-client/: slnatc.cpp
src-clientd/: slnat-daemon.cpp
